// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget config parse selectors getColors returns the colors if the chartType is not pie 1`] = `
Array [
  Object {
    "color": "#fff0c2",
    "label": "Water scarcity",
  },
]
`;

exports[`Widget config parse selectors getColors returns the pie colors if the chartType is pie 1`] = `
Array [
  Object {
    "color": "#fff0c2",
    "label": 1,
  },
  Object {
    "color": "#9a1e2a",
    "label": 2,
  },
]
`;

exports[`Widget config parse selectors getYKeys returns the default YKeys if there is no meta 1`] = `
Object {
  "lines": null,
}
`;

exports[`Widget config parse selectors getYKeys returns the parsed YKeys 1`] = `
Object {
  "lines": Object {
    "y1": Object {
      "fill": "#fff0c2",
      "stroke": "#fff0c2",
    },
  },
}
`;

exports[`Widget config parse selectors makeGetConfig Parses the config 1`] = `
Object {
  "cartesianGrid": Object {
    "strokeDasharray": "5 5",
    "vertical": false,
  },
  "colors": Array [
    Object {
      "color": "#ee5463",
      "label": "Water scarcity",
    },
  ],
  "tooltip": Object {
    "cursor": Object {
      "opacity": 0,
    },
  },
  "type": "bar",
  "xAxis": Object {
    "axisLine": false,
    "interval": "preserveStartEnd",
    "tick": Object {
      "fill": "#ffffff",
      "fontFamily": "DecimaMonoPro",
      "fontSize": 14,
    },
    "tickLine": false,
    "type": "category",
  },
  "xKey": "x",
  "yAxis": Object {
    "axisLine": false,
    "domain": Array [
      0,
      "auto",
    ],
    "tick": Object {
      "fill": "#ffffff",
      "fontFamily": "DecimaMonoPro",
      "fontSize": 14,
      "interval": 2,
      "tickCount": 2,
    },
    "tickFormatter": [Function],
    "type": undefined,
  },
  "yAxisLabel": Object {
    "suffix": "/7",
    "text": "Water scarcity",
  },
  "yKeys": Object {
    "bars": Object {
      "y1": Object {
        "fill": "#ee5463",
        "interval": "preserveStartEnd",
        "stroke": "#ee5463",
      },
    },
  },
  "yKeysAttributes": Object {
    "bars": Object {
      "interval": "preserveStartEnd",
    },
  },
}
`;
